# machinelearning

./: .gitignore  LICENSE  README.md
LinearRegression/Notes/: LinearRegression.tex
LinearRegression/Rust/: Cargo.toml
LinearRegression/Rust/src/: main.rs
LogisticRegression/Notes/: LogisticRegression.tex  notes.md
LogisticRegression/Rust/: Cargo.toml
LogisticRegression/Rust/src/: main.rs
